--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -203,10 +203,10 @@
 %%%%% CHAPTERS
 % Add or remove any chapters you'd like here, by file name (excluding '.tex'):
 \flushbottom
-%\include{text/ch1-intro}
-%\include{text/ch2-zvp}
+\include{text/ch1-intro}
+\include{text/ch2-zvp}
 \include{text/ch3-orion}
-%\include{text/chx-misc}
+\include{text/chx-misc}
 
 
 %% APPENDICES %% 
@@ -214,8 +214,8 @@
 %    page that just says "Appendices" to signal the end of your main text.
 \startappendices
 % Add or remove any appendices you'd like here:
-%\include{text/appendix-1}
-%\include{text/appendix-2}
+\include{text/appendix-1}
+\include{text/appendix-2}
 
 %%%%% REFERENCES
 
